--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -40,13 +40,10 @@
         <title>Hello World</title>
     </head>
     <body>
-      <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
-      <script type="text/javascript" src="js/Helpers.js"></script>
+ <ons-page ng-controller="DynamicCarouselController">
 
-      <div id="question">THIS IS THE QUESTION</div>
-
-        <ons-button id="Hello" onclick="GetQuizData()"> hi </ons-button>
-
-        <input type="text" class="text-input" ng-model="text" placeholder="Type here" style="display: block; width: 100%">
+      <ons-list id="quizList">
+    </ons-list>
+  </ons-page>
     </body>
 </html>
