--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -28,16 +28,23 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
         <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
         <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+        <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
+
         <title>Hello World</title>
     </head>
     <body>
-        
+ <ons-page ng-controller="DynamicCarouselController">
+   <script type="text/javascript" src="js/index.js"></script>
+
+      <ons-list id="quizList">
+        <ons-list-item>hi</ons-list-item>
+    </ons-list>
+  </ons-page>
     </body>
 </html>
