--- a/platforms/android/assets/www/main.html
+++ b/platforms/android/assets/www/main.html
@@ -33,18 +33,21 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
         <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+        <link rel="stylesheet" href="css/index.css">
         <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
         <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
 
         <title>Hello World</title>
     </head>
-    <body>
- <ons-page ng-controller="DynamicCarouselController">
-   <script type="text/javascript" src="js/index.js"></script>
+    <body onload="NextQuestion()" bgcolor="#FFF09B">
+      <script type="text/javascript" src="js/Helpers.js"></script>
+      <!--Question-->
+      <div style="text-align: center;width: 100%; height: 10%; vertical-align: middle;display: inline-flex;" id="question"></div>
+      <!--Answer-->
+       <div style="text-align: center;width: 100%;height:50%" class="content-padded"  id="answerSection"></div>
 
-      <ons-list id="quizList">
-        <ons-list-item>hi</ons-list-item>
-    </ons-list>
-  </ons-page>
+        <button
+        <button class="nextButton" id="Hello" onclick="NextQuestion()"> NEXT </ons-button>
     </body>
 </html>
