Started score saving and answer checking

--- a/www/signIn.html
+++ b/www/signIn.html
@@ -12,7 +12,7 @@
 
         <title>Hello World</title>
     </head>
-    <body  bgcolor="#900C3F">
+    <body  bgcolor="#2A212A">
             <div style="text-align: center;width: 100%; height: 75%; horizontal-align:middle ;vertical-align: middle;display: block; font-size: 2vh;" id="inputDiv"></div>
             <div  align="center" style="text-align: center;width: 100%; height: 25%; vertical-align: middle;display: inline-flex; font-size: 2vh;" id="buttonDiv"></div>
             <script src="js/SignIn.js"></script>
