Finished adding score to user

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,17 @@
 
       <ons-list id="quizList">
         <ons-list-header style="background-color:#353535; font-size:6vw; height:50px;"><b style="vertical-align: bottom;">Quizzes</b></ons-list-header>
+        <ons-list-item>
+      <div class="left">
+        <ons-icon icon="md-face" class="list-item__icon"></ons-icon>
+      </div>
+      <div class="center">
+        Icon and switch
+      </div>
+      <div class="right">
+        <ons-switch></ons-switch>
+      </div>
+    </ons-list-item>
     </ons-list>
     </body>
 </html>
